fixed a layout issue to the homepage that I accidently introduced

--- a/frontend/src/less/mapusaurus/search.less
+++ b/frontend/src/less/mapusaurus/search.less
@@ -43,21 +43,61 @@
     .search-indent {
         padding-left:20px;
 
+    }
+
+    .search-title-column1 {
+        float:left;
+    }
+
+    .search-title-column2 {
+        float:left;
+        padding-left:5px;
+    }
+
+    .search-field {
+        
+        label {
+            display: inline-block;
+        }
+
+        input[disabled] {
+          color: @gray-20;
+        }
+
+        input[type="text"] {
+            width: 24em;
+            padding: 0.25em 0.5em;
+        }
+
+        .search-name-label,
+        .example-hint {
+            display: block;
+            font-size: small;
+        }
+
+        .example-hint {
+            color: @gray-50;
+            font-style: italic;
+            margin-top: 6px;
+        }
+
+        .tt-suggestion {
+            text-transform: capitalize;
+            border-left: 1px solid @gray-50;
+            border-right: 1px solid @gray-50;
+            border-bottom: 1px solid @gray-50;
+            padding: 0 4px;
+            background-color: @gray-5;
+            width: 24em; /* same width as search input */
+        }
+
+        .tt-suggestion p {
+            margin-bottom: 8px;
+        }
 
     }
 
 }
-
-/*
-.search-title-column1 {
-    float:left;
-}
-
-.search-title-column2 {
-    float:left;
-    padding-left:5px;
-}
-*/
 
 /* Search input form (gray bar at top of page ) */
 
@@ -241,9 +281,10 @@
             .webfont-regular();
             color: @pacific;
             font-size: (@base-font-size-px + 6);
-            border-bottom: 1px dotted @pacific;
             margin-bottom: 4px;
-            display: inline-block;
+            a {
+                border-bottom: 1px dotted @pacific;
+            }
         }
         
         .search-result-record__cfpb-id {
